First commit, created the header page and a part of body.

--- a/index.html
+++ b/index.html
@@ -2,3 +2,66 @@
 Usa este archivo para tu proyecto. No olvides hacer
 la estructura correta y guardar TODO tu CSS en el archivo styles.css
  -->
+<!DOCTYPE html>
+<html>
+    <head>
+        <!--link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'-->
+        <meta charset="utf-8">
+        <link type= "text/css" rel="stylesheet" href='css/styles.css' />
+        <title>"My portfolio!"</title>
+    </head>
+
+    <body>
+        <div>
+            <div>
+                <img class="logo" src="images/cognits-logo.png " alt="There was a logo of Cognits"/>
+            </div>
+           <div class="right">
+               <h1 class="student" > COGNITS STUDENTS</h1>
+               <h3 class="front"> FRONT-END PADAWAN </h3>
+            </div>
+        </div>
+        <br/>
+        <hr/>
+        <br/>
+
+<table >
+    <tr>
+        <h1 class="featured">Featured Work</h1>
+            <td >
+                <div class="test search">
+                    <p >Cognits Search Engine</p>
+                </div>
+        <h1 class="hello">hola que hace</h1>
+            </td>
+        <td >
+            <div class="test inventory">
+                
+            </div>
+        </td>
+    </tr>
+
+    <tr>
+        <td >
+            <div class="test portfolio">
+
+            </div>
+        </td>
+        <td >
+            <div class="test battle">
+            </div>
+        </td>
+    </tr>
+
+</table>
+<!--
+        <div class="search-engine">
+            <p class="textOnBox">Cognits Search Engine</p>
+        </div>
+
+        <div class="search-engine">
+            <p class="textOnBox">Cognits Search Engine</p>
+        </div-->
+
+    </body>
+</html>
