Only miss to modify the search engine.

--- a/index.html
+++ b/index.html
@@ -32,24 +32,32 @@ la estructura correta y guardar TODO tu CSS en el archivo styles.css
                 <div class="test search">
                     <p >Cognits Search Engine</p>
                 </div>
-        <h1 class="hello">hola que hace</h1>
+        <h1 class="name">SEARCH ENGINE</h1>
+        <h3 class="sub-name">FAVAPP</h3>
             </td>
         <td >
             <div class="test inventory">
-                
+                    <p>Inventory</p>
             </div>
+        <h1 class="name">INVENTORY</h1>
+        <h3 class="sub-name">FRAMEWORK</h3>
         </td>
     </tr>
 
     <tr>
         <td >
             <div class="test portfolio">
-
+            <p>The Portfolio</p>
             </div>
+        <h1 class="name">PORTFOLIO</h1>
+        <h3 class="sub-name">BOOTSTRAP</h3>
         </td>
         <td >
             <div class="test battle">
+            <p>Battleship</p>
             </div>
+        <h1 class="name">BATTLESHIP</h1>
+        <h3 class="sub-name">BOOTSTRAP</h3>
         </td>
     </tr>
 
