Finished project. XD!

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 Usa este archivo para tu proyecto. No olvides hacer
 la estructura correta y guardar TODO tu CSS en el archivo styles.css
  -->
+         <!--link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'-->
 <!DOCTYPE html>
 <html>
     <head>
-        <!--link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'-->
+
         <meta charset="utf-8">
         <link type= "text/css" rel="stylesheet" href='css/styles.css' />
         <title>"My portfolio!"</title>
@@ -29,47 +30,96 @@ la estructura correta y guardar TODO tu CSS en el archivo styles.css
     <tr>
         <h1 class="featured">Featured Work</h1>
             <td >
-                <div class="test search">
-                    <p >Cognits Search Engine</p>
-                </div>
-        <h1 class="name">SEARCH ENGINE</h1>
-        <h3 class="sub-name">FAVAPP</h3>
+                <img class = "babosaC" src="images/search-engine.png " alt="There was a search engine "/>
+            <h1 class="name">SEARCH ENGINE</h1>
+            <h3 class="subName">
+                <a href="https://github.com/MarielyLopez/python-search-engine">FAVAPP
+            </h3>
             </td>
+
         <td >
             <div class="test inventory">
-                    <p>Inventory</p>
+                    <p class="textOnBox">Inventory</p>
             </div>
         <h1 class="name">INVENTORY</h1>
-        <h3 class="sub-name">FRAMEWORK</h3>
+        <h3 class="subName">
+            <a href="https://github.com/MarielyLopez/Calculator-whit-testing">FRAMEWORK
+                </a>
+        </h3>
         </td>
     </tr>
 
     <tr>
         <td >
             <div class="test portfolio">
-            <p>The Portfolio</p>
+                <p class="textOnBox">This Portfolio</p>
             </div>
         <h1 class="name">PORTFOLIO</h1>
-        <h3 class="sub-name">BOOTSTRAP</h3>
+        <h3 class="subName">
+            <a href="https://github.com/MarielyLopez/frontend-portfolio">BOOTSTRAP
+            </a>
+        </h3>
         </td>
         <td >
             <div class="test battle">
-            <p>Battleship</p>
+                <p class="textOnBox">Battleship</p>
             </div>
         <h1 class="name">BATTLESHIP</h1>
-        <h3 class="sub-name">BOOTSTRAP</h3>
+        <h3 class="subName">
+            <a href="https://github.com/MarielyLopez/python-battleship">BOOTSTRAP
+            </a>
+        </h3>
+        </td>
+    </tr>
+
+    <tr>
+        <td>
+            <div class="test register">
+                <p class="textOnBox"> Register Machine</p>
+            </div>
+        <h1 class="name">REGISTER MACHINE</h1>
+        <h3 class="subName">
+            <a href="https://github.com/MarielyLopez/python-register-machine">FRAMEWORK
+            </a>
+        </h3>
+        </td>
+        <td>
+            <div class="test countries">
+                <p class="textOnBox">Countries-Capitals</p>
+            </div>
+        <h1 class="name">COUNTRIES-CAPITALS</h1>
+        <h3 class="subName">
+            <a href="https://github.com/MarielyLopez/python-countries-capitals">FRAMEWORK
+            </a>
+        </h3>
+        </td>
+    </tr>
+
+    <tr>
+        <td>
+            <div class="test guess">
+                <p class="textOnBox">Guess Number</p>
+            </div>
+        <h1 class="name">GUESS NUMBER</h1>
+        <h3 class="subName">
+            <a href="https://github.com/MarielyLopez/python-guess-number">FRAMEWORK 
+            </a>
+        </h3>
+        </td>
+
+        <td>
+            <div class="test factorial">
+                <p class="textOnBox">Factorial</p>
+            </div>
+        <h1 class="name">FACTORIAL</h1>
+        <h3 class="subName">
+            <a href="https://github.com/MarielyLopez/python-factorial">FRAMEWORK
+            </a>
+        </h3>
         </td>
     </tr>
 
 </table>
-<!--
-        <div class="search-engine">
-            <p class="textOnBox">Cognits Search Engine</p>
-        </div>
-
-        <div class="search-engine">
-            <p class="textOnBox">Cognits Search Engine</p>
-        </div-->
 
     </body>
 </html>
